# cerl-thesaurus-networks

./: .gitignore  README.md  pyproject.toml
binder/: apt.txt  environment.yml  requirements.txt
data/: german_cities.csv  lng_lat.csv
data/examples/: demo.graphml  demo_1700.json  graph_corpus_demo_1700.json
data/examples/multiple_files/: demo_1710.json  demo_1720.json
data/examples/multiple_graphml/: demo_1710.graphml
data/shapefiles/CNTR_BN_20M_2020_4326.shp/: CNTR_BN_20M_2020_4326.dbf
jupyter/: 01 - csv2json.ipynb  02 - json2edgelist.ipynb  03 - graphanalysis.ipynb  README.md  full-example.ipynb
