[tool.poetry]
name = "cerl-thesaurus-networks"
version = "0.1.0"
description = "Tutorials and network analysis using data from the CERL thesaurus"
authors = ["Andreas Lüschow <lueschow@sub.uni-goettingen.de>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/alueschow/cerl-thesaurus-networks"


[tool.poetry.dependencies]
python = ">=3.8, <3.10"
jupyter = "^1.0.0"
notebook = "^6.4.0"
pandas = "^1.3.0"
ipython = "^7.25.0"
ipykernel = "^6.0.1"
bibliometa = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
